/**
 * API Route: POST /api/ledger/waive-fee
 *
 * Waive fees on a loan account.
 *
 * Request body:
 * - loanAccountId (required): Loan account ID
 * - waiverAmount (required): Amount to waive as string
 * - reason (required): Reason for waiver
 * - approvedBy (required): Approver ID
 * - expectedVersion (optional): Expected updatedAt for version conflict detection
 */

import { NextRequest, NextResponse } from 'next/server'
import {
  getLedgerClient,
  timestampToDate,
  getTransactionTypeLabel,
  generateIdempotencyKey,
} from '@/server/grpc-client'
import { checkVersion, createVersionConflictResponse } from '@/lib/utils/version-check'
import { createValidationError, handleApiError } from '@/lib/utils/api-error'

interface WaiveFeeBody {
  loanAccountId: string
  waiverAmount: string
  reason: string
  approvedBy: string
  expectedVersion?: string
}

export async function POST(request: NextRequest) {
  let body: WaiveFeeBody | undefined
  try {
    body = await request.json()

    // Validation
    if (!body.loanAccountId) {
      return createValidationError('loanAccountId')
    }
    if (!body.waiverAmount) {
      return createValidationError('waiverAmount')
    }
    if (!body.reason) {
      return createValidationError('reason')
    }
    if (!body.approvedBy) {
      return createValidationError('approvedBy')
    }

    // Version conflict check (if expectedVersion provided)
    const versionResult = await checkVersion(body.loanAccountId, body.expectedVersion)
    if (!versionResult.isValid) {
      return NextResponse.json(createVersionConflictResponse(versionResult), { status: 409 })
    }

    const client = getLedgerClient()
    const idempotencyKey = generateIdempotencyKey('waive')
    const response = await client.waiveFee({
      loanAccountId: body.loanAccountId,
      waiverAmount: body.waiverAmount,
      reason: body.reason,
      approvedBy: body.approvedBy,
      idempotencyKey,
    })

    const tx = response.transaction

    return NextResponse.json({
      success: true,
      transaction: {
        id: tx.transactionId,
        accountId: tx.loanAccountId,
        type: tx.type,
        typeLabel: getTransactionTypeLabel(tx.type),
        date: timestampToDate(tx.transactionDate).toISOString(),
        feeDelta: parseFloat(tx.feeDelta),
        feeAfter: parseFloat(tx.feeAfter),
        totalAfter: parseFloat(tx.totalAfter),
        description: tx.description,
      },
      eventId: response.eventId,
    })
  } catch (error) {
    return handleApiError(error, {
      action: 'waive-fee',
      accountId: body?.loanAccountId,
    })
  }
}

